--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "smart-shutters",
   "version": "0.0.0",
   "description": "SD Project",
-  "author": null,
+  "author": "Alejandro Escobar",
   "private": true,
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
@@ -17,6 +17,7 @@
     "@react-native-community/masked-view": "^0.1.6",
     "expo": "~36.0.0",
     "expo-font": "^8.0.0",
+    "expo-sqlite": "^8.0.0",
     "native-base": "^2.13.8",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
